--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -143,6 +143,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ChangePerspective",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +ActionMappings=(ActionName="ZoomIn",bShift=False,bCtrl=True,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="ZoomOut",bShift=False,bCtrl=True,bAlt=False,bCmd=False,Key=MouseScrollDown)
++ActionMappings=(ActionName="TakeItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="InteractWithAllItemsOneKind",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
