--- a/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Config/DefaultEditorPerProjectUserSettings.ini
@@ -43,3 +43,8 @@ AssetEditorOpenLocation=MainWindow
 bEnableColorizedEditorTabs=True
 bEnableLegacyEditorModeUI=False
 
+[/Script/StaticMeshEditorExtension.UVUnwrapSettings]
+ChannelSelection=AutomaticLightmapSetup
+UVChannel=0
+AngleThreshold=66.000000
+
