added saving and loading

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -145,6 +145,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ZoomOut",bShift=False,bCtrl=True,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="TakeItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="InteractWithAllItemsOneKind",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Save",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
++ActionMappings=(ActionName="Load",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=L)
++ActionMappings=(ActionName="Reset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=J)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
